# AI-Research-Bot

./: agenticai01.ipynb  agenticai01_cleaned.ipynb  research_03.ipynb  researchai_02.ipynb
buisnessfetch/: config.json  pyproject.toml
filesystem/: README.md  main.py
filesystem/data/: example.txt
notesagent/: main.py  pyproject.toml
